--- a/searching.html
+++ b/searching.html
@@ -71,9 +71,9 @@
         <h1 id="answer"></h1>
     </div>
 
-    <script src="/scripts/searching.js"></script>
-    <script src="/scripts/visualizations.js"></script>  
-    <script src="/scripts/linear.js"></script>
-    <script src="scripts/binarySearch.js"></script>
+    <script src="searching.js"></script>
+    <script src="visualizations.js"></script>  
+    <script src="linear.js"></script>
+    <script src="binarySearch.js"></script>
 </body>
 </html>
