--- a/sorting.html
+++ b/sorting.html
@@ -65,13 +65,13 @@
         <button id="merge">Merge Sort</button>
         <button id="heap">Heap Sort</button>
     </div>
-    <script src="/scripts/sorting.js"></script>
-    <script src="/scripts/visualizations.js"></script>  
-    <script src="/scripts/bubble_sort.js"></script>
-    <script src="/scripts/selection_sort.js"></script>
-    <script src="/scripts/insertion_sort.js"></script>
-    <script src="/scripts/merge_sort.js"></script>
-    <script src="/scripts/quick_sort.js"></script>
-    <script src="/scripts/heap_sort.js"></script>
+    <script src="sorting.js"></script>
+    <script src="visualizations.js"></script>  
+    <script src="bubble_sort.js"></script>
+    <script src="selection_sort.js"></script>
+    <script src="insertion_sort.js"></script>
+    <script src="merge_sort.js"></script>
+    <script src="quick_sort.js"></script>
+    <script src="heap_sort.js"></script>
 </body>
 </html>
